--- a/src/scss/layouts/layout_992/_veggie-pizza.scss
+++ b/src/scss/layouts/layout_992/_veggie-pizza.scss
@@ -20,6 +20,10 @@
 
         @include e(btn){
             top: 92%;
+
+            &:hover {
+                background: $red;
+            }
         }
     }
 }
