--- a/src/scss/base/mixins/_utilites.scss
+++ b/src/scss/base/mixins/_utilites.scss
@@ -76,13 +76,10 @@
 
 @mixin styleForNewArrives($numBlock){
   @include e($numBlock){
-    /* margin-right: 10px;
-    &:last-of-type {
-      margin-right: 0;
-    } */
     @include e(figure){
         margin: 0;
         position: relative;
+        margin-right: 7px;
         @include m(img){
             width: 100%;
             max-width: 100%;
@@ -342,6 +339,7 @@
 }
 
 @mixin stylesForPropose($num) {
+
   @include e($num){
     @include e(before){
         position: relative;
@@ -363,6 +361,8 @@
             
         }
     }
+
+  
 
     @include e(elements){
         display: flex;
@@ -398,4 +398,20 @@
         }
     }
 }
+}
+
+@mixin fz992pxPropose ($num){
+  @include e($num){
+    @include e(name-box){
+      @include m(a){
+        display: block;
+        padding-top: 20px;
+        font-size: 16px;
+
+        &:hover {
+          color: $red;
+        }
+      }
+    }
+  }
 }
