--- a/src/scss/layouts/layout_000/_header.scss
+++ b/src/scss/layouts/layout_000/_header.scss
@@ -1,7 +1,7 @@
 .header {
-    position: sticky;
+    position: fixed;
     top: 0;
-    z-index: 1;
+    z-index: 10;
     width: 100%;
     padding: 15px;
     background-color: $white;
