--- a/src/scss/layouts/layout_992/_pops.scss
+++ b/src/scss/layouts/layout_992/_pops.scss
@@ -1,15 +1,16 @@
 .pop-up-login {
     display: none;
-
     width: 100%;
     height: 100%;
     position: fixed;
-    left: 0;
+    left: 50%;
+    transform: translateX(-50%);
     top: 0;
     background: rgba(0,0,0,.6);
-    z-index: 5;
+    z-index: 2;
 
     @include e(container){
+        margin: auto;
         width: 100%;
         height: 100%;
 
@@ -110,9 +111,4 @@
             }
         }
     }
-}
-
-
-.active{
-    display: block;
 }
