--- a/src/scss/base/mixins/_utilites.scss
+++ b/src/scss/base/mixins/_utilites.scss
@@ -104,12 +104,12 @@
             left: 50%;
             transform: translate(-50%);
             @include e(ul){
-            
                 margin: 0;
                 padding: 0;
                 list-style: none;
                 display: flex;
                 justify-content: center;
+                bottom: 0;
                 font-size: 9px;
 
                 @include m(li){
