--- a/src/scss/layouts/layout_992/_header.scss
+++ b/src/scss/layouts/layout_992/_header.scss
@@ -55,22 +55,49 @@
        }
 
        @include e(ul-menu){
-        display: none;
-            position: absolute;
-            top: 50px;
-            left: -25px;
-        @include e(li){
-            
-            list-style: none;
+            display: none;
+            min-width: 100%;
+            min-height: 100%;
+            padding-bottom: 10px;
             background: $white;
+            position: absolute;
+            top: 47px;
+            left: 2px;
+            z-index: 2;
+            cursor:auto;
+        
+        @include e(li){
+            position: relative;
+            list-style: none;
             padding: 10px;
+            cursor:pointer;
+           
             
+            &::after{
+                position: absolute;
+                bottom: 4px;
+                left: 9px;
+                content: '';
+                width: 35px;
+                height: 1px;
+                background: $red;
+            } 
+            @include e(img){
+                margin-bottom: 10px;
+                &:hover {
+                    box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+                    transition: all .2s linear;
+                }
+            }
            
 
             @include m(a){
                 text-decoration: none;
                 color: $black;
                 text-transform: uppercase;
+                &:hover{
+                    color: $red;
+                }
             }
         }
        }
@@ -97,20 +124,6 @@
     }
 }
 
-.header-fixed{
-    width: 100%;
-    position: fixed;
-    top: -100%;
-    z-index: 3;
-    background: $colorHeaderIsShow;
-   
-}
-
-.header-is-show{
-    top: 0;
-
-}
-
 .header{
     display: none;
 }
@@ -127,3 +140,41 @@
     background: $colorHeaderIsShow;
     transition: all .3s linear;
 } 
+
+.active-sub-menu{
+    display: block;
+    
+}
+
+.grid-header{
+    padding: 0;
+    display:grid;
+    grid-template-areas: 
+        "m1 m2 m3"
+        "m4 m5 ."
+    ;
+}
+
+.first-li {
+    grid-area: m1;
+}
+
+.second-li {
+    grid-area: m2;
+}
+
+.third-li {
+    grid-area: m3;
+}
+
+.fourth-li {
+    grid-area: m4;
+}
+
+.fifth-li {
+    grid-area: m5;
+}
+
+.activee {
+    color: $red;
+}
