--- a/src/scss/layouts/layout_992/_header.scss
+++ b/src/scss/layouts/layout_992/_header.scss
@@ -55,9 +55,8 @@
        }
 
        @include e(ul-menu){
-            display: none;
             min-width: 100%;
-            min-height: 100%;
+            display: none;
             padding-bottom: 10px;
             background: $white;
             position: absolute;
@@ -82,6 +81,7 @@
                 height: 1px;
                 background: $red;
             } 
+
             @include e(img){
                 margin-bottom: 10px;
                 &:hover {
@@ -91,7 +91,7 @@
             }
            
 
-            @include m(a){
+            @include e(a){
                 text-decoration: none;
                 color: $black;
                 text-transform: uppercase;
@@ -99,8 +99,10 @@
                     color: $red;
                 }
             }
+        
         }
-       }
+
+    }
         
     }
 
@@ -177,4 +179,77 @@
 
 .activee {
     color: $red;
+}
+
+.header-for-992px__nav__ul-menu__li_a{
+    display: block;
+    text-decoration: none;
+    color: $black;
+    position: relative;
+    font-size: 17px;
+    font-weight: $semiBoldFontWeight;
+    padding-bottom: 10px;
+    margin-bottom: 14px;
+    cursor: auto;
+
+    &:hover {
+        cursor: pointer;
+        color: $red;
+    }
+    
+    &::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 35px;
+        height: 1px;
+        background: $red;
+
+    }
+}
+
+.header-for-992px__nav__ul-menu__li-second{
+    margin-right: 20px;
+    list-style: none;
+}
+
+.header-for-992px__nav__ul-menu__second__ul{
+    padding: 0;
+}
+
+.header-for-992px__nav__ul-menu__second__ul__li{
+    list-style: none;
+    
+}
+
+.header-for-992px__nav__ul-menu__second__ul__li{
+    display: block;
+    padding: 4px 0;
+    text-decoration: none;
+    font-size: 15px;
+    color: $colorWordsNav;
+    &:hover {
+        color: $red;
+    }
+}
+
+.p30{
+    padding: 30px;
+}
+
+.left-100{
+    left: 100px;
+}
+
+.left-190{
+    left: 190px;
+}
+
+.left-320{
+    left: 320px;
+}
+
+.left-410{
+    left: 410px;
 }
