--- a/src/scss/layouts/layout_000/_header.scss
+++ b/src/scss/layouts/layout_000/_header.scss
@@ -64,8 +64,128 @@
        }
     }
 
+
+
 }
 
 .header-for-992px{
+    display: none;
+}
+
+.dark-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    visibility: hidden;
+    z-index: 99998;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .8);
+    opacity: 0;
+    transition: opacity .3s, visibility .3s;
+}
+
+.dark-overlay.visible {
+    opacity: 1;
+    visibility: visible;
+}
+
+/* Mobile menu. */
+.mobile-menu {
+    background-color: #fff;
+    padding: 6rem 0 2rem;
+	position: fixed;
+    width: 20rem;
+	top: 0;
+	right: -100%;
+	transition: right .3s;
+    z-index: 99999;
+    height: 100%;
+    overflow: scroll;
+}
+
+.mobile-menu.visible {
+    right: 0;
+}
+
+.mobile-menu ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.mobile-navigation {
+    display: none;
+    position: fixed;
+    left: 0;
+    top: 0;
+    max-width: 100%;
+    width: 80%;
+    height: 100vh;
+    z-index: 1000000;
+    box-shadow:  5px 0 15px -5px rgba(0,0,0,.8);
+    background: $white;
+    overflow-y: auto;
+}
+
+.mobile-navigation.block{
+    display: block;
+}
+.mobile-navigation.block-none{
+    display: none;
+}
+
+.mobile-navigation a {
+    display: block;
+    padding: 1rem;
+    color: #3D4146;
+    text-decoration: none;
+    transition: all .3s;
+}
+
+.mobile-navigation a.active {
+    background-color: rgba(0, 0, 0, .1);
+}
+
+.mobile-navigation li {
+    position: relative;
+}
+
+/* 1st level. */
+.mobile-navigation > ul > li > a {
+    font-weight: bold;
+}
+
+/* Lower levels. */
+.mobile-navigation li ul {
+    padding-left: 2rem;
+    display: none;
+}
+            
+/* Drop-down arrows. */
+.mobile-navigation li.has-submenu:after {
+    content: "";
+    position: absolute;
+    top: 1.6rem;
+    width: 0;
+    height: 0;
+}
+
+.mobile-navigation li.has-submenu:after {
+    right: 1rem;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 5px solid rgba(0, 0, 0, .25);
+}
+
+.mobile-navigation li.has-submenu.opened:after {
+    border-bottom: 5px solid rgba(0, 0, 0, .25);
+    border-top: none;
+}
+
+.dark-overlay.none {
+    display: none;
+}
+.menu-button.none {
     display: none;
 }
