--- a/src/scss/layouts/layout_000/_header.scss
+++ b/src/scss/layouts/layout_000/_header.scss
@@ -1,5 +1,5 @@
 .header {
-    position: fixed;
+    display: block;
     top: 0;
     z-index: 10;
     width: 100%;
@@ -126,13 +126,13 @@
     box-shadow:  5px 0 15px -5px rgba(0,0,0,.8);
     background: $white;
     overflow-y: auto;
+    font-family: $fontSofiaPro;
+    font-size: 16px;
 }
 
 .mobile-navigation.block{
     display: block;
-}
-.mobile-navigation.block-none{
-    display: none;
+    transition: transform .3s linear;
 }
 
 .mobile-navigation a {
@@ -188,4 +188,16 @@
 }
 .menu-button.none {
     display: none;
+}
+
+.is-submenu {
+    text-transform: uppercase;
+}
+
+.active320px{
+    position: fixed;
+    transform: translateY(100px);
+    width: 100%;
+    background: $colorHeaderIsShow;
+    transition: all .3s linear;
 }
