--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -37,6 +37,7 @@ $colorForgotPass: #c5c4c4;
 $colorBorderRegisterBlock: #e8eced;
 $colorRegisterBlock : #f2f2f2;
 $colorWordsNav: #7d7b7b;
+$colorBorderShoppingCart: #dedede;
 
 $colors: (
   "black": $black,
@@ -52,4 +53,5 @@ $colors: (
   "colorRegisterBlock": $colorRegisterBlock,
   "colorBorderRegisterBlock": $colorBorderRegisterBlock,
   "colorWordsNav": $colorWordsNav,
+  "colorBorderShoppingCart": $colorBorderShoppingCart,
 ) !default;
