--- a/src/scss/layouts/layout_992/_pops.scss
+++ b/src/scss/layouts/layout_992/_pops.scss
@@ -6,7 +6,7 @@
     left: 0;
     top: 0;
     background: rgba(0,0,0,.6);
-    z-index: 2;
+    z-index: 20;
 
     @include e(container){
         height: 100%;
@@ -108,4 +108,98 @@
             }
         }
     }
+}
+
+.pop-up-bag{
+    height: 100%;
+    width: 30%;
+    background: $white;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 20;
+    transform: translateX(1000px);
+
+    @include e(header){
+        display: flex;
+        justify-content: space-between;
+        position: relative;
+        width: 100;
+        height: 100%;
+        &:after{
+            content: '';
+            width: 100%;
+            height: 1px;
+            background: $colorBorderShoppingCart;
+            position: absolute;
+            bottom: 0;
+           }
+
+        & > div {
+           
+        }
+    }
+
+    @include e(close){
+        position: relative;
+        padding: 15px;
+
+        &::after{
+            content: '';
+            width: 1px;
+            height: 54px;
+            background: $colorBorderShoppingCart;
+            position: absolute;
+            right: 0px;
+            top: 0;
+           }
+    }
+
+    @include e(i){
+        font-size: 25px;
+        &:hover {
+            color: $red;
+            cursor: pointer;
+        }
+    }
+
+    @include e(h2){
+      margin: 0;
+      margin-top: 11px;
+    }
+
+    @include e(count){
+        padding: 15px;
+        display: flex;
+        align-items: center;
+        position: relative;
+        &::after{
+            content: '';
+            width: 1px;
+            height: 54px;
+            background: $colorBorderShoppingCart;
+            position: absolute;
+            left: 0;
+            top: 0;
+           }
+    }
+
+    @include e(num){
+    }
+
+    @include e(main){
+        font-size: 18px;
+        display: flex;
+        justify-content: center;
+    }
+}
+
+.open-pop{
+    transform: translateX(0);
+    transition: transform .3s linear;
+}
+
+.close-pop {
+    transform: translateX(1000px);
+    transition: transform .3s linear;
 }
