--- a/src/scss/layouts/layout_992/_pops.scss
+++ b/src/scss/layouts/layout_992/_pops.scss
@@ -108,10 +108,22 @@
             }
         }
     }
+
+    @include e(i){
+        position: absolute;
+        font-size: 25px;
+        top: 10px;
+        right: 10px;
+        &:hover {
+            color: $red;
+            cursor: pointer;
+        }
+    }
 }
 
 .pop-up-bag{
-    height: 100%;
+    display: block;
+    min-height: 100%;
     width: 30%;
     background: $white;
     position: fixed;
@@ -119,13 +131,13 @@
     right: 0;
     z-index: 20;
     transform: translateX(1000px);
+    transition: transform .3s linear;
 
     @include e(header){
         display: flex;
         justify-content: space-between;
         position: relative;
-        width: 100;
-        height: 100%;
+        width: 100%;
         &:after{
             content: '';
             width: 100%;
@@ -134,10 +146,6 @@
             position: absolute;
             bottom: 0;
            }
-
-        & > div {
-           
-        }
     }
 
     @include e(close){
@@ -199,7 +207,81 @@
     transition: transform .3s linear;
 }
 
-.close-pop {
+
+.pop-up-like{
+    display: block;
+    width: 30%;
+    min-height: 100%;
+    background: $white;
+    position: fixed;
+    right: 0;
+    top: 0;
+    z-index: 20;
     transform: translateX(1000px);
     transition: transform .3s linear;
+
+    @include e(header){
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        position: relative;
+        &:after{
+            content: '';
+            width: 100%;
+            height: 1px;
+            background: $colorBorderShoppingCart;
+            position: absolute;
+            bottom: 0;
+           }
+    }
+
+    @include e(close){
+        position: relative;
+        padding: 15px;
+
+        &::after{
+            content: '';
+            width: 1px;
+            height: 54px;
+            background: $colorBorderShoppingCart;
+            position: absolute;
+            right: 0px;
+            top: 0;
+           }
+    }
+
+    @include e(i){
+        font-size: 25px;
+        &:hover {
+            color: $red;
+            cursor: pointer;
+        }
+    }
+
+    @include e(h2){
+      margin: 0;
+      margin-top: 11px;
+    }
+
+    @include e(count){
+        padding: 15px;
+        display: flex;
+        align-items: center;
+        position: relative;
+        &::after{
+            content: '';
+            width: 1px;
+            height: 54px;
+            background: $colorBorderShoppingCart;
+            position: absolute;
+            left: 0;
+            top: 0;
+           }
+    }
+
+    @include e(main){
+        font-size: 18px;
+        display: flex;
+        justify-content: center;
+    }
 }
