--- a/src/scss/layouts/layout_000/_pops.scss
+++ b/src/scss/layouts/layout_000/_pops.scss
@@ -3,9 +3,122 @@
 }
 
 .pop-up-bag{
-    display: none;
-}
+    min-height: 100%;
+    width: 80%;
+    background: $white;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 20;
+    transform: translateX(1000px);
+    transition: transform .3s linear;
 
+    @include e(header){
+        display: flex;
+        justify-content: space-between;
+        position: relative;
+        width: 100%;
+        &:after{
+            content: '';
+            width: 100%;
+            height: 1px;
+            background: $colorBorderShoppingCart;
+            position: absolute;
+            bottom: 0;
+           }
+    }
+
+    @include e(close){
+        position: relative;
+        padding: 15px;
+
+        &::after{
+            content: '';
+            width: 1px;
+            height: 50px;
+            background: $colorBorderShoppingCart;
+            position: absolute;
+            right: 0px;
+            top: 0;
+           }
+    }
+
+    @include e(i){
+        font-size: 20px;
+        &:hover {
+            color: $red;
+            cursor: pointer;
+        }
+    }
+
+    @include e(h2){
+      margin: 0;
+      margin-top: 11px;
+      font-size: 20px;
+      font-weight: $mediumFontWeight;
+    }
+
+    @include e(count){
+        padding: 15px;
+        display: flex;
+        align-items: center;
+        position: relative;
+        &::after{
+            content: '';
+            width: 1px;
+            height: 50px;
+            background: $colorBorderShoppingCart;
+            position: absolute;
+            left: 0;
+            top: 0;
+           }
+    }
+
+    @include e(num){
+    }
+
+    @include e(main){
+        font-size: 18px;
+        display: flex;
+        justify-content: center;
+    }
+
+    @include e(massage){
+        font-size: 17px;
+    }
+}
 .pop-up-like{
     display: none;
 }
+.pop-up-search { 
+    @include e(form) {
+        position: fixed;
+        display: flex;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        z-index: 1000;
+        padding: 8px;
+        background-color: #f1f1f1;
+        border-radius: 4px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+        transition: all .3s linear;
+        opacity: 0;
+      }
+
+      @include e(input){
+        width: 75%;
+      }
+
+      @include e(btn){
+        margin-left: auto;
+      }
+    
+  }
+  
+  .pop-up-search__form.active {
+    top: 80px;
+    opacity: 1;
+  }
+  
+  
