--- a/src/scss/layouts/layout_992/_deals.scss
+++ b/src/scss/layouts/layout_992/_deals.scss
@@ -17,6 +17,7 @@
             background: $red;
             border: 1px solid transparent;
             transition: all .2s linear;
+            cursor: pointer;
         }
     }
 }
