--- a/src/scss/layouts/layout_992/_veggie-pizza.scss
+++ b/src/scss/layouts/layout_992/_veggie-pizza.scss
@@ -22,6 +22,8 @@
             top: 92%;
 
             &:hover {
+                cursor: pointer;
+                transition: all .2s linear;
                 background: $red;
             }
         }
