--- a/src/scss/layouts/layout_992/_header.scss
+++ b/src/scss/layouts/layout_992/_header.scss
@@ -10,9 +10,9 @@
         
     }
     @include e(nav){
-        width: 40%;
+        width: 42%;
         position: relative;
-       @include e(ul){
+        @include e(ul){
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -256,4 +256,22 @@
 
 .mobile-navigation{
     display: none;
+}
+
+.dark-over {
+    position: fixed;
+    top: 0;
+    left: 0;
+    visibility: hidden;
+    z-index: 18;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .8);
+    opacity: 0;
+    transition: opacity .3s, visibility .3s;
+}
+
+.dark-over.visible {
+    opacity: 1;
+    visibility: visible;
 }
