--- a/src/scss/layouts/layout_992/_pops.scss
+++ b/src/scss/layouts/layout_992/_pops.scss
@@ -82,7 +82,10 @@
                     }
 
                     &:hover {
+                        cursor: pointer;
                         background: $red;
+                       transition: all .2s linear;
+
                     }
                 }
             }
@@ -134,6 +137,10 @@
 
     @include e(i){
         font-size: 25px;
+        &:hover{
+            color: $red;
+            cursor: pointer;
+        }
     }
 
     @include e(h2){
@@ -244,6 +251,116 @@
 }
 
 .open-pop1{
+    transform: translateX(0);
+    transition: transform .3s linear;
+}
+
+.pop-up-s {
+    display: block;
+    width: 30%;
+    min-height: 100%;
+    background: $white;
+    position: fixed;
+    right: 0;
+    top: 0;
+    z-index: 20;
+    transform: translateX(1000px);
+    transition: transform .3s linear;
+
+    @include e(header){
+        width: 100%;
+        display: flex;
+        // justify-content: space-between;
+        position: relative;
+        &:after{
+            content: '';
+            width: 100%;
+            height: 1px;
+            background: $colorBorderShoppingCart;
+            position: absolute;
+            bottom: 0;
+           }
+    }
+
+    @include e(close){
+        position: relative;
+        padding: 15px;
+
+        &::after{
+            content: '';
+            width: 1px;
+            height: 54px;
+            background: $colorBorderShoppingCart;
+            position: absolute;
+            right: 0px;
+            top: 0;
+           }
+    }
+
+    @include e(i){
+        font-size: 25px;
+        &:hover {
+            color: $red;
+            cursor: pointer;
+        }
+    }
+
+    @include e(title){
+        margin: auto;
+      
+    }
+
+    @include e(h2){
+        margin: 0;
+       
+    }
+    
+    @include e(form){
+        position: absolute;
+        top: 60px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    @include e(input){
+        border: 1px solid $colorForgotPass;
+        padding: 15px;
+        width: 339px;
+    }
+
+    @include e(btn){
+        display: block;
+        background: $black;
+        margin-top: 20px;
+        padding: 15px;
+        width: 339px;
+
+        &:hover {
+            cursor: pointer;
+            background: $red;
+            transition: all .2s linear;
+        }
+        @include m(a){
+            display: block;
+            color: $white;
+            font-size: 14px;
+            font-weight: $semiBoldFontWeight;
+            text-transform: uppercase;
+            text-decoration: none;
+        }
+
+    }    
+
+    @include e(main){
+        height: 100vh;
+        width: 100%;
+        font-size: 18px;
+        position: relative;
+       
+    }
+}
+
+.open-pop2{
     transform: translateX(0);
     transition: transform .3s linear;
 }
